2007-07-31  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Making use of CDATA escaping optional through with
	a compile time option (EJAB-298).
	* src/Makefile.in: Likewise.
	* src/configure.ac: Likewise.

2007-07-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_version.erl: Added option to hide OS version (thanks to
	Badlop)
	* doc/guide.tex: Updated

	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/msgs/gl.msg: New galician translation (thanks to
	Carlos E. Lopez)

	* src/ejabberd_config.erl: Added possibility for appending values
	to config options (thanks to Badlop)
	* doc/guide.tex: Updated

2007-07-30  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Better escaping management with CDATA. We only add
	CDATA enclosure when needed. CDATA end token is properly escaped.

	* src/xml.erl: Only wrap xmldata nodes in xml cdata "tag" if
	bigger than 50 bytes. Shorter xmlcdata nodes will be escaped.
	
	* src/tls/tls_drv.c: Sends the entire certificate chain (EJAB-209).

	* src/acl.erl: Remove compilation warnings (EJAB-290).

	* src/xml_stream.erl: Group CDATA on a single xmlcdata
	node (splitting is not relevant as dependant on TCP/IP packet
	fragmentation) (EJAB-292).
	
	* src/xml.erl: Remove compilation warnings (EJAB-290).

	* src/xml.erl: Do not crypt binary CData, but enclose the value in
	XML CDATA "tag".
	
	* src/xml.erl: Code clean-up: removed old code in comments.

2007-07-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster_odbc.erl: Better error management when bad JID in
	roster table (EJAB-289).

2007-07-26  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_web_admin.erl: Code clean-up.
	
	* src/mod_offline.erl: Code clean-up.

	* src/gen_mod.erl: Throw error more cleanly.
	
	* src/mod_configure.erl: One ACL call was not virtual host
	compliant.

	* src/ejabberd_auth_odbc.erl: Fixed wrong call preventing user